--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     <div class="photo-slider-container">
         <div class="slider-wrapper">
             <div class="slider-inner" id="sliderInner">
-                <div class="slide active"><img src="/images/photo1.jpg" alt="Profile Photo 1"></div>
-                <div class="slide"><img src="/images/photo2.jpg" alt="Profile Photo 2"></div>
-                <div class="slide"><img src="/images/photo3.jpg" alt="Profile Photo 3"></div>
+                <div class="slide active"><img src="photo1.jpg" alt="Profile Photo 1"></div>
+                <div class="slide"><img src="photo2.jpg" alt="Profile Photo 2"></div>
+                <div class="slide"><img src="photo3.jpg" alt="Profile Photo 3"></div>
             </div>
             <div class="slider-dots">
                 <span class="dot active" onclick="currentSlide(0)"></span>
