--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
                 <div class="slide active"><img src="photo1.jpg" alt="Profile Photo 1"></div>
                 <div class="slide"><img src="photo2.jpg" alt="Profile Photo 2"></div>
                 <div class="slide"><img src="photo3.jpg" alt="Profile Photo 3"></div>
+               <div class="slide"><img src="photo4.jpg" alt="Profile Photo 4"></div>
+               <div class="slide"><img src="photo5.jpg" alt="Profile Photo 5"></div>
             </div>
             <div class="slider-dots">
                 <span class="dot active" onclick="currentSlide(0)"></span>
@@ -274,7 +276,7 @@
         showSlide(index);
     }
 
-    setInterval(()=>{ changeSlide(1); },5000); // auto-slide every 5 sec
+    setInterval(()=>{ changeSlide(1); },7000); // auto-slide every 7 sec
 </script>
 </body>
 </html>
