--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <div class="detail-item"><div class="detail-label">Complexion</div><div class="detail-value">Fair</div></div>
                 <div class="detail-item"><div class="detail-label">Location</div><div class="detail-value">Madhavkampa, TA Bayad, DI Aravalli,303330</div></div>
                 <div class="detail-item"><div class="detail-label">Hobbies</div><div class="detail-value">Macro photography, listening to music, learning new skills for self-improvement</div></div>
-                <div class="detail-item"><div class="detail-label">About</div><div class="detail-value">Calm, focused, and values honesty, family, and growth. Enjoys macro photography, music, and learning new skills.</div></div>
+                <div class="detail-item"><div class="detail-label">About</div><div class="detail-value">Calm, responsible, and family-oriented individual with a strong interest in technology and continuous self-growth. Believes in mutual respect, honesty, and maintaining balanced personal and professional life.</div></div>
             </div>
         </div>
 
@@ -253,7 +253,7 @@
     <div class="footer">
         <div class="ganesha-symbol">ॐ</div>
         <p><strong>Contact:</strong> +91 8799051812, +91 8780335530 | divyvadiya@gmail.com</p>
-        <p><strong>Address:</strong> AT PO Madhavkampa, TA Bayad, DI Aravalli, 383330</p>
+        <p><strong>Address:</strong>Madhavkampa, Taluka Bayad, District Aravalli, Gujarat – 383330</p>
     </div>
 
 <script>
