--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <h2 class="section-title">Personal Details</h2>
             <div class="details-grid">
                 <div class="detail-item"><div class="detail-label">Name</div><div class="detail-value">Vadiya Divy Pramodbhai</div></div>
-                <div class="detail-item"><div class="detail-label">Age</div><div class="detail-value">22</div></div>
+                <div class="detail-item"><div class="detail-label">Date of Birth/Age</div><div class="detail-value">22-03-2004/22</div></div>
                 <div class="detail-item"><div class="detail-label">Height</div><div class="detail-value">5.3 Feet</div></div>
                 <div class="detail-item"><div class="detail-label">Religion</div><div class="detail-value">Hindu</div></div>
                 <div class="detail-item"><div class="detail-label">Caste</div><div class="detail-value">Kutchi Patel</div></div>
